--- a/homepage.html
+++ b/homepage.html
@@ -92,8 +92,8 @@
 
     <div class="row" style="font-size: 20px;padding: 0px 50px 50px 50px;">
         <p><b>HealthHub</b> is an all in one medical solution, which brings  Disease
-            Detections like  Brain Tumor Detection,  Kidney Disease Detection and
-           Pneumonia Detection under one platform.</p>
+            Detections like  Brain Tumor Detection,  Kidney Disease Detection,
+           Pneumonia Detection and Bone Cancer Detection under one platform.</p>
 
         <h2 class='text-center py-3'
             style="color: rgb(255, 255, 255);font-variant: petite-caps;background-color: rgb(0, 0, 0);margin-bottom:0px">
